Fix 'find deco' button invisible on light mode

--- a/src/levelEditor/sidebar/objectsList/SidebarDecoList.module.css
+++ b/src/levelEditor/sidebar/objectsList/SidebarDecoList.module.css
@@ -1,3 +1,7 @@
 .highlight {
 	background: var(--luncheon-purple);
 }
+
+.highlight :global(.mantine-ActionIcon-root) {
+	color: unset;
+}
