--- a/src/levelEditor/sidebar/objectsList/SidebarObjectList.module.css
+++ b/src/levelEditor/sidebar/objectsList/SidebarObjectList.module.css
@@ -3,6 +3,6 @@
 	color: #000;
 }
 
-.highlight :global(.mantine-ActionIcon-icon) {
-	color: #000;
+.highlight :global(.mantine-ActionIcon-root) {
+	color: unset;
 }
